--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,8 +24,11 @@ dependencies:
   flutter:
     sdk: flutter
   smooth_star_rating: ^1.1.1
-
-
+  image_picker: ^0.8.3+2
+  video_player: ^2.1.13
+  file_picker: ^4.0.0
+  shared_preferences: ^2.0.6
+  http: ^0.13.3
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
