--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,8 @@ dependencies:
   video_player: ^2.1.13
   file_picker: ^4.0.0
   shared_preferences: ^2.0.6
+  flutter_full_pdf_viewer: ^1.0.4
+  path_provider: ^0.4.1
   http: ^0.13.3
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
